# dvai-bridge

./: .gitignore  .gitmodules  CHANGELOG.md  CHANGE_DATE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DVAIBridge.podspec  LICENSE  NOTICE  POSITIONING.md  README.md  RELEASE-CHECKLIST.md  RESEARCH.md  SECURITY.md  TODO.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vitest.config.ts
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md  cla.json  dependabot.yml  labeler.yml
docs/: index.md  llms-full.txt  llms.txt  package.json
examples/: MATRIX.md  README.md
fixtures/: transport-fixtures.json  transport-fixtures.schema.json
hub/: .gitignore  DEVELOPER-FORK.md  index.html  package.json  tsconfig.json  vite.config.ts
hub/src-tauri/: Cargo.toml  tauri.conf.json
hub/src-tauri/capabilities/: default.json
hub/src-tauri/icons/: README.md  icon.icns
hub/src-tauri/src/: ipc.rs  lib.rs  main.rs  sidecar.rs  tray.rs
rendezvous/: .env.example  DEPLOYMENT.md  Dockerfile  README.md  app.yaml  package-lock.json  package.json  railway.json  tsconfig.json
scripts/: android-publish-local.ps1  android-publish-local.sh  build-all.ps1  build-all.sh  build-android.sh  build-dotnet.sh  build-flutter.sh  build-ios.sh  build-react-native.sh  build-research-pdf.mjs  build-web.sh  generate-audio-fixtures.sh  generate-image-fixtures.sh  mac-build.ps1  mac-side-build-examples.sh  mac-side-build.sh  mac-side-clean.sh  mac-side-prepare-llama-desktop.sh  mac-side-prepare-xcframework.sh  mac-side-test.sh  patch-cocoapods-vendor.py  prepare-ios-release.sh  (+7 more)
(+346 files in other folders)
