[package]
name = "dvai-hub"
version = "3.1.0"
description = "DVAI Hub — household-utility flavor of distributed inference"
authors = ["Deep Voice AI Limited"]
edition = "2021"
rust-version = "1.77"

# The library that holds the actual run() function. main.rs just calls into it.
[lib]
name = "dvai_hub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-util", "sync", "process", "time"] }
log = "0.4"
env_logger = "0.11"
thiserror = "1"
once_cell = "1"
directories = "5"

[features]
# Enable custom protocol when distributed-inference is built without a dev server.
# The CLI sets these automatically on `tauri build`.
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
